# rules_python

./: .bazelignore  .bazelrc  .bazelrc.deleted_packages  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  2  AGENTS.md  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  DEVELOPING.md  GEMINI.md  MODULE.bazel  RELEASING.md  WORKSPACE  downloader_config.cfg  entry_point_template.bat  gazelle_python_manifest_platform_issue.md  internal_dev_deps.bzl  internal_dev_setup.bzl  plan.md  prompt.md  replicate_ci  replicate_ci.py  ruff.toml
command_line_option/: BUILD.bazel
examples/: BUILD.bazel
examples/build_file_generation/: BUILD.bazel  WORKSPACE  requirements_lock.txt  requirements_windows.txt
examples/bzlmod/: .bazelrc  BUILD.bazel  MODULE.bazel  requirements.in  requirements_lock_3_10.txt  requirements_lock_3_11.txt  requirements_lock_3_9.txt  requirements_windows_3_10.txt  requirements_windows_3_11.txt  test.py
examples/bzlmod/entry_points/: BUILD.bazel
examples/bzlmod/tests/: version.py
examples/bzlmod_build_file_generation/: requirements_lock.txt  requirements_windows.txt
examples/local_python/: BUILD.bazel  WORKSPACE  main.py
examples/multi_python_versions/: MODULE.bazel  WORKSPACE
examples/multi_python_versions/requirements/: requirements.in  requirements_lock_3_10.txt  requirements_lock_3_11.txt  requirements_lock_3_12.txt  requirements_lock_3_13.txt  requirements_lock_3_14.txt
examples/mytorch/: .bazelrc  BUILD.bazel  MODULE.bazel  requirements.in  requirements_lock.txt  requirements_lock_.txt  torch_test.py
examples/pip_parse/: .bazelrc  .gitignore  MODULE.bazel  WORKSPACE  constraints_urllib3.txt  pip_parse_test.py  requirements.in  requirements_lock.txt  requirements_windows.txt
examples/pip_parse_vendored/: BUILD.bazel  WORKSPACE  requirements.bzl  requirements.txt
examples/pip_repository_annotations/: BUILD.bazel  WORKSPACE  pip_repository_annotations_test.py  requirements.txt
examples/platform_specific_deps/: BUILD.bazel  MODULE.bazel  pytest_main.py  requirements.in  requirements.txt  test_load.py
examples/py_proto_library/: WORKSPACE
examples/wheel/: BUILD.bazel  requirements_server.txt  wheel_test.py
examples/wheel/private/: BUILD.bazel
python/config_settings/private/: BUILD.bazel
python/local_toolchains/: BUILD.bazel
python/private/common/: BUILD.bazel
sphinxdocs/: .bazelrc  .bazelrc.deleted_packages  BUILD.bazel  MODULE.bazel  downloader_config.cfg  readthedocs.bzl  sphinx.bzl  sphinx_docs_library.bzl  sphinx_stardoc.bzl
sphinxdocs/docs/: BUILD.bazel  sphinx-bzl.md  starlark-docgen.md
sphinxdocs/integration_tests/: integration_test.bzl
sphinxdocs/integration_tests/bcr/: BUILD.bazel  MODULE.bazel
sphinxdocs/integration_tests/persistent_worker/: persistent_worker_test.py
sphinxdocs/inventories/: BUILD.bazel  bazel_inventory.txt
sphinxdocs/private/: BUILD.bazel  readthedocs.bzl  sphinx.bzl  sphinx_docs_library_macro.bzl  sphinx_server.py  sphinx_stardoc.bzl  util.bzl
sphinxdocs/sphinxdocs/docs/: readthedocs.md
sphinxdocs/sphinxdocs/private/: BUILD.bazel  sphinx_server.py
sphinxdocs/src/sphinx_bzl/: BUILD.bazel  bzl.py
sphinxdocs/tests/persistent_worker/: BUILD.bazel  git_test.py
sphinxdocs/tests/proto_to_markdown/: BUILD.bazel  proto_to_markdown_test.py
sphinxdocs/tests/sphinx_docs/: BUILD.bazel
sphinxdocs/tests/sphinx_stardoc/: BUILD.bazel  sphinx_output_test.py
tests/: BUILD.bazel
tests/base_rules/: BUILD.bazel  py_executable_base_tests.bzl  util.bzl
tests/base_rules/py_info/: py_info_tests.bzl
tests/base_rules/py_test/: py_test_tests.bzl
tests/bootstrap_impls/: BUILD.bazel  bazel_tools_importable_test.py  sys_path_order_test.py  system_python_nodeps_test.py
tests/build_data/: BUILD.bazel  build_data_test.py
tests/builders/: attr_builders_tests.bzl
tests/coverage_deps/: coverage_deps_test.bzl
tests/entry_points/: BUILD.bazel  py_console_script_gen_test.py
tests/exec_toolchain_matching/: BUILD.bazel  exec_toolchain_matching_tests.bzl
tests/get_release_info/: get_release_info_tests.bzl
tests/integration/: BUILD.bazel  custom_commands_test.py  integration_test.bzl  runner.py  toolchain_target_settings_test.py  unified_pypi_test.py  uv_lock_test.py  validate_test_main_test.py
tests/load_from_macro/: BUILD.bazel
tests/multiple_inputs/: multiple_inputs.txt  multiple_pyproject_toml.txt  multiple_requirements_in.txt
tests/py_runtime/: py_runtime_tests.bzl
tests/py_wheel/: py_wheel_tests.bzl
tests/py_wheel_performance/: BUILD.bazel  gen_py_libs.bzl  py_wheel_analysis_scaling_test.sh  py_wheel_contents_test.py
tests/py_zipapp/: BUILD.bazel  extract_root_test.sh  main.py  system_python_zipapp_external_bootstrap_test.sh  system_python_zipapp_sh_test.sh  system_python_zipapp_test.py  venv_zipapp_test.py
tests/pytest_test/: BUILD.bazel
tests/python/: BUILD.bazel  python_tests.bzl  test_helpers.bzl
tests/python_bzlmod_ext/: BUILD.bazel  parse_sha_manifest_tests.bzl  runtime_manifests_tests.bzl
tests/repl/: BUILD.bazel  repl_test.py
tests/repo_utils/: BUILD.bazel  repo_utils_test.bzl
tests/repro/: repro.sh
tests/runfiles/: BUILD.bazel  runfiles_test.py
tests/runtime_env_toolchain/: BUILD.bazel  runtime_env_toolchain_tests.bzl  toolchain_runs_test.py
tests/semver/: semver_test.bzl
tests/support/: BUILD.bazel  copy_file.bzl  mocks.bzl  py_extension.bzl  py_reconfig.bzl  sh_py_run_test.bzl  support.bzl
tests/toolchains/: BUILD.bazel  defs.bzl  python_toolchain_test.py
tests/tools/: wheelmaker_test.py
tests/uv_pypi/: BUILD.bazel  bin.py  pyproject.toml
tests/validate_test_main/: BUILD.bazel  validate_test_main_test.py
tests/venv_site_packages_libs/: BUILD.bazel  bin.py  depset_tests.bzl  py_binary_other_module_test.sh  shared_lib_loading_test.py  whl_scripts_runnable_test.py
tests/version_label/: version_label_test.bzl
tests/whl_with_build_files/: BUILD.bazel  verify_files_test.py
tests/zip_runfiles_symlinks/: BUILD.bazel  root_symlinked_source.txt  symlink_data.bzl  symlinked_source.txt  zip_contents_test.py
tools/private/: BUILD.bazel
(+620 files in other folders)
