# Copyright 2017 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

# gazelle:resolve starlark @rules_cc//cc/common:cc_info.bzl @rules_cc//cc/common:common
# gazelle:resolve starlark @rules_cc//cc/common:cc_common.bzl @rules_cc//cc/common:common
# gazelle:resolve starlark @com_google_protobuf//bazel:py_proto_library.bzl @com_google_protobuf//bazel:py_proto_library_bzl
# gazelle:resolve starlark @bazel_tools//tools/build_defs/repo:http.bzl //python/private:bazel_tools
# gazelle:resolve starlark @bazel_tools//tools/build_defs/repo:utils.bzl //python/private:bazel_tools

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files([
    "LICENSE",
    "version.bzl",
])

exports_files(
    [".bazelversion"],
    visibility = ["//tests:__subpackages__"],
)

exports_files(
    glob(["*.md"]),
    visibility = ["//docs:__subpackages__"],
)

filegroup(
    name = "distribution",
    srcs = [
        "BUILD.bazel",
        "MODULE.bazel",
        "WORKSPACE",
        "WORKSPACE.bzlmod",
        "internal_dev_deps.bzl",
        "internal_dev_setup.bzl",
        "version.bzl",
        "//command_line_option:distribution",
        "//python:distribution",
        "//tools:distribution",
    ],
    visibility = [
        "//:__subpackages__",
    ],
)

# Reexport of all bzl files used to allow downstream rules to generate docs
# without shipping with a dependency on Skylib
filegroup(
    name = "bzl",
    srcs = [
        "//python/pip_install:bzl",
        "//python:bzl",
        # Requires Bazel 0.29 onward for public visibility of these .bzl files.
        "@bazel_tools//tools/python:python_version.bzl",
        "@bazel_tools//tools/python:srcs_version.bzl",
        "@bazel_tools//tools/python:toolchain.bzl",
        "@bazel_tools//tools/python:utils.bzl",
    ],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "internal_dev_deps",
    srcs = ["internal_dev_deps.bzl"],
    deps = [
        "//python/private:internal_config_repo",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:local.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "internal_dev_setup",
    srcs = ["internal_dev_setup.bzl"],
    deps = [
        ":version",
        "//python:versions",
        "//python/private:pythons_hub",
        "//python/private:runtime_env_repo",
        "//python/private/pypi:deps",
        "//python/private/pypi:whl_library",
        "//tests/support/whl_from_dir:whl_from_dir_repo",
        "@bazel_features//:deps",
        "@bazel_skylib//:workspace",
        "@cgrindel_bazel_starlib//:deps",
        "@com_google_protobuf//:protobuf_deps",
        "@rules_bazel_integration_test//bazel_integration_test:deps",
        "@rules_bazel_integration_test//bazel_integration_test:repo_defs",
        "@rules_shell//shell:repositories",
    ],
)

bzl_library(
    name = "version",
    srcs = ["version.bzl"],
)
