# Copyright 2017 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# The following is experimental API and currently not intended for use outside this example.
load("@rules_python//python/uv/private:lock.bzl", "lock")  # buildifier: disable=bzl-visibility

licenses(["notice"])  # Apache 2.0

lock(
    name = "bzlmod_requirements_3_9",
    srcs = ["bzlmod/requirements.in"],
    out = "bzlmod/requirements_lock_3_9.txt",
    args = [
        "--emit-index-url",
        "--universal",
        "--python-version=3.9",
    ],
    python_version = "3.9",
)

lock(
    name = "bzlmod_requirements_3_11",
    srcs = ["bzlmod/requirements.in"],
    out = "bzlmod/requirements_lock_3_11.txt",
    args = [
        "--emit-index-url",
        "--universal",
        "--python-version=3.11",
    ],
    python_version = "3.11",
)

lock(
    name = "bzlmod_requirements_3_11_windows",
    srcs = ["bzlmod/requirements.in"],
    out = "bzlmod/requirements_windows_3_11.txt",
    args = [
        "--emit-index-url",
        "--python-platform",
        "windows",
        "--python-version=3.11",
    ],
    python_version = "3.11",
)

lock(
    name = "mytorch_requirements",
    srcs = ["mytorch/requirements.in"],
    out = "mytorch/requirements_lock.txt",
    args = [
        "--emit-index-url",
        "--universal",
        # This means that the lowest supported version in the requirements file will
        # be 3.12
        "--python-version=3.12",
    ],
    # Means that we will pass the available 3.12 interpreter to the locking rule irrespective
    # of what we have in rules_python as the default toolchain.
    python_version = "3.12",
)
