load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:build_test.bzl", "build_test")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

build_test(
    name = "bzl_libraries_build_test",
    targets = [
        # keep sorted
        "//python:current_py_toolchain",
        "//python:defs",
        "//python:proto",
        "//python:py_binary",
        "//python:py_cc_link_params_info",
        "//python:py_import",
        "//python:py_info",
        "//python:py_library",
        "//python:py_runtime",
        "//python:py_runtime_info",
        "//python:py_runtime_pair",
        "//python:py_test",
        "//python/cc:py_cc_toolchain",
        "//python/cc:py_cc_toolchain_info",
        "//python/entry_points:py_console_script_binary",
    ],
)

bzl_library(
    name = "default_info_subject",
    srcs = ["default_info_subject.bzl"],
    deps = ["@rules_testing//lib/private:runfiles_subject"],
)
