load("@rules_python//python:py_test.bzl", "py_test")

py_test(
    name = "torch_test_py_312",
    srcs = ["torch_test.py"],
    main = "torch_test.py",
    python_version = "3.12",
    deps = ["@pip//torch"],
)

py_test(
    name = "torch_test_default",
    srcs = ["torch_test.py"],
    main = "torch_test.py",
    deps = ["@pip//torch"],
)

py_test(
    name = "torch_test_default_downloader",
    srcs = ["torch_test.py"],
    main = "torch_test.py",
    deps = ["@pip_next//torch"],
)

py_test(
    name = "torch_test_py312_downloader",
    srcs = ["torch_test.py"],
    main = "torch_test.py",
    python_version = "3.12",
    deps = ["@pip_next//torch"],
)

py_test(
    name = "torch_test_downloader_freethreaded",
    srcs = ["torch_test.py"],
    config_settings = {
        "@rules_python//python/config_settings:py_freethreaded": "yes",
    },
    main = "torch_test.py",
    deps = ["@pip_next//torch"],
)
