load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//:__subpackages__"])

filegroup(
    name = "distribution",
    srcs = glob(["**"]),
)

bzl_library(
    name = "repos",
    srcs = ["repos.bzl"],
    deps = [
        "@rules_python//python/private:local_runtime_repo",
        "@rules_python//python/private:local_runtime_toolchains_repo",
    ],
)
