load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

# Copyright 2023 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load(":sh_py_run_test.bzl", "current_build_settings")

package(
    default_visibility = ["//:__subpackages__"],
)

current_build_settings(
    name = "current_build_settings",
)

string_flag(
    name = "custom_runtime",
    build_setting_default = "",
)

config_setting(
    name = "is_custom_runtime_linux-x86-install-only-stripped",
    flag_values = {
        ":custom_runtime": "linux-x86-install-only-stripped",
    },
)

bzl_library(
    name = "cc_info_subject",
    srcs = ["cc_info_subject.bzl"],
    deps = ["@rules_testing//lib:truth"],
)

bzl_library(
    name = "py_cc_toolchain_info_subject",
    srcs = ["py_cc_toolchain_info_subject.bzl"],
    deps = ["@rules_testing//lib:truth"],
)

bzl_library(
    name = "py_executable_info_subject",
    srcs = ["py_executable_info_subject.bzl"],
    deps = ["@rules_testing//lib:truth"],
)

bzl_library(
    name = "py_info_subject",
    srcs = ["py_info_subject.bzl"],
    deps = ["@rules_testing//lib:truth"],
)

bzl_library(
    name = "py_reconfig",
    srcs = ["py_reconfig.bzl"],
    deps = [
        ":support",
        "//python/private:attr_builders",
        "//python/private:common_labels",
        "//python/private:py_binary_macro",
        "//python/private:py_binary_rule",
        "//python/private:py_test_macro",
        "//python/private:py_test_rule",
        "@rules_python_internal//:rules_python_config",
    ],
)

bzl_library(
    name = "py_runtime_info_subject",
    srcs = ["py_runtime_info_subject.bzl"],
    deps = ["@rules_testing//lib:truth"],
)

bzl_library(
    name = "support",
    srcs = ["support.bzl"],
    deps = [
        "//python/private:bzlmod_enabled",
        "@rules_python_internal//:rules_python_config",
    ],
)

bzl_library(
    name = "copy_file",
    srcs = ["copy_file.bzl"],
)

bzl_library(
    name = "mocks",
    srcs = ["mocks.bzl"],
)
