# Copyright 2026 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
load("//python:py_binary.bzl", "py_binary")
load("//python:py_test.bzl", "py_test")
load(":symlink_data.bzl", "symlink_data")

symlink_data(
    name = "symlink_data",
    root_symlinked = "root_symlinked_source.txt",
    symlinked = "symlinked_source.txt",
)

py_binary(
    name = "bin",
    srcs = ["bin.py"],
    data = [":symlink_data"],
)

filegroup(
    name = "bin_zip",
    testonly = True,
    srcs = [":bin"],
    output_group = "python_zip_file",
)

py_test(
    name = "zip_contents_test",
    srcs = ["zip_contents_test.py"],
    data = [":bin_zip"],
    env = {
        "ZIP_RLOCATION": "$(rlocationpath :bin_zip)",
    },
    deps = ["//python/runfiles"],
)
