load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle_binary")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(
    default_visibility = ["//:__subpackages__"],
)

filegroup(
    name = "distribution",
    srcs = glob(["**"]) + [
        "//tools/private/zipapp:distribution",
    ],
)

bzl_library(
    name = "publish_deps",
    srcs = ["publish_deps.bzl"],
    deps = ["//python/uv/private:lock"],
)

gazelle_binary(
    name = "gazelle_bin",
    languages = DEFAULT_LANGUAGES + [
        "@bazel_skylib_gazelle_plugin//bzl",
    ],
)
