load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

filegroup(
    name = "distribution",
    srcs = glob(["**"]),
    visibility = ["//python/config_settings:__pkg__"],
)

bzl_library(
    name = "py_args",
    srcs = ["py_args.bzl"],
    visibility = ["//python/config_settings:__subpackages__"],
)
