load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "py_binary_rule_bazel",
    srcs = ["py_binary_rule_bazel.bzl"],
    visibility = ["//python:__subpackages__"],
)

bzl_library(
    name = "py_library_rule_bazel",
    srcs = ["py_library_rule_bazel.bzl"],
    visibility = ["//python:__subpackages__"],
)

bzl_library(
    name = "py_runtime_rule",
    srcs = ["py_runtime_rule.bzl"],
    visibility = ["//python:__subpackages__"],
)

bzl_library(
    name = "py_test_rule_bazel",
    srcs = ["py_test_rule_bazel.bzl"],
    visibility = ["//python:__subpackages__"],
)
