load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@sphinxdocs//sphinxdocs:sphinx.bzl", "sphinx_build_binary", "sphinx_docs")

sphinx_docs(
    name = "docs",
    srcs = ["index.md"],
    config = "conf.py",
    formats = ["html"],
    sphinx = ":sphinx-build",
)

sphinx_build_binary(
    name = "sphinx-build",
    deps = [
        "@pypi//myst_parser",
        "@pypi//sphinx",
    ],
)

build_test(
    name = "docs_build_test",
    targets = [":docs"],
)
