# Copyright 2026 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_python//python:py_test.bzl", "py_test")

py_test(
    name = "git_test",
    srcs = ["git_test.py"],
    data = [
        "//sphinxdocs:BUILD.bazel",
        # Ensure the inner `bazel-in-bazel` build has access to all required `@sphinxdocs`
        # rule definitions and tools when running in sandboxed CI environments, and trigger
        # test invalidation/re-staging whenever the persistent worker implementation changes.
        "//sphinxdocs:sphinx",
        "//sphinxdocs/private:sphinx_build.py",
        "//sphinxdocs/private:sphinx_run_template.sh",
    ],
    env = {
        "SPHINXDOCS_RLOCATION": "$(rlocationpath //sphinxdocs:BUILD.bazel)",
    },
    tags = [
        "local",
        "no-sandbox",
    ],
    deps = [
        "@dev_pip//absl_py",
        "@rules_python//python/runfiles",
    ],
)
