load("@rules_python//python:py_test.bzl", "py_test")

py_test(
    name = "git_test",
    srcs = ["git_test.py"],
    data = [
        "//sphinxdocs:BUILD.bazel",
        # Ensure the inner `bazel-in-bazel` build has access to all required `@sphinxdocs`
        # rule definitions and tools when running in sandboxed CI environments, and trigger
        # test invalidation/re-staging whenever the persistent worker implementation changes.
        "//sphinxdocs:sphinx",
        "//sphinxdocs/private:sphinx_build.py",
        "//sphinxdocs/private:sphinx_run_template.sh",
    ],
    env = {
        "SPHINXDOCS_RLOCATION": "$(rlocationpath //sphinxdocs:BUILD.bazel)",
    },
    tags = [
        "local",
        "no-sandbox",
    ],
    deps = [
        "@dev_pip//absl_py",
        "@rules_python//python/runfiles",
    ],
)
