load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_shared_library.bzl", "cc_shared_library")
load("//python:py_test.bzl", "py_test")

# buildifier: disable=bzl-visibility
load("//python/cc:py_extension.bzl", "py_extension")
load(":dependency_graph_tests.bzl", "dependency_graph_test_suite")
load(":py_extension_tests.bzl", "py_extension_analysis_test_suite")
load(":py_limited_api_tests.bzl", "py_limited_api_test_suite")

package(
    default_testonly = True,
    default_visibility = ["//visibility:private"],
)

licenses(["notice"])

#####

py_extension(
    # An extension defined solely by source files, with no deps
    name = "ext_source",
    srcs = ["ext_source.c"],
)

#####

py_extension(
    # A python extension that gets its code from a statically-linked library
    name = "ext_static",
    deps = [":static_dep"],
)

cc_library(
    name = "static_dep",
    srcs = ["static_dep.c"],
    hdrs = ["static_dep.h"],
)

#####

py_extension(
    # An extension that also depends on a data file
    name = "ext_with_data",
    data = ["test_symbols.h"],
    deps = [":static_dep"],
)

#####

py_extension(
    # A python extension that dynamically links to another shared library
    name = "ext_shared",
    dynamic_deps = [
        ":add_one_shared",
    ],
    deps = [
        #
        ":ext_shared_impl",
    ],
)

cc_library(
    name = "ext_shared_impl",
    srcs = ["ext_shared.c"],
    copts = [
        # Gemini says PIC is needed
        "-fPIC",
        "-fvisibility=hidden",
    ],
    deps = [
        #":add_one_headers",
        # todo: if we put this here, we statically link add_one into the
        # extension.
        ":add_one_impl",
        "@rules_python//python/cc:current_py_cc_headers",
    ],
)

cc_shared_library(
    name = "add_one_shared",
    deps = [":add_one_impl"],
)

cc_library(
    name = "add_one_headers",
    hdrs = ["add_one.h"],
)

cc_library(
    name = "add_one_impl",
    srcs = ["add_one.c"],
    deps = [
        ":add_one_headers",
        ":add_one_helper",
    ],
)

cc_library(
    name = "add_one_helper",
    srcs = ["add_one_helper.c"],
    hdrs = ["add_one_helper.h"],
)

#####

py_extension(
    # An extension that uses the Python limited API
    name = "ext_limited",
    py_limited_api = "3.8",
    deps = [":ext_limited_impl"],
)

cc_library(
    name = "ext_limited_impl",
    srcs = ["ext_limited.c"],
    copts = [
        "-fPIC",
        "-fvisibility=hidden",
    ],
    defines = ["Py_LIMITED_API=0x3080000"],
    deps = [
        "@rules_python//python/cc:current_py_cc_headers",
    ],
)

#####

py_extension(
    # An extension with its PyInit_* function in a static dependency
    name = "ext_init_in_dep",
    deps = [":ext_init_in_dep_impl"],
)

cc_library(
    name = "ext_init_in_dep_impl",
    srcs = ["ext_init_in_dep.c"],
    deps = [
        "@rules_python//python/cc:current_py_cc_headers",
    ],
)

#####

py_extension(
    # An extension with its PyInit_* function in a dynamic dependency
    name = "ext_init_in_dynamic_dep",
    dynamic_deps = [":ext_init_in_dynamic_dep_2"],
)

cc_shared_library(
    name = "ext_init_in_dynamic_dep_2",
    deps = [":ext_init_in_dynamic_dep_impl"],
)

cc_library(
    name = "ext_init_in_dynamic_dep_impl",
    srcs = ["ext_init_in_dynamic_dep.c"],
    deps = [
        "@rules_python//python/cc:current_py_cc_headers",
    ],
)

#####

py_test(
    name = "py_extension_test",
    srcs = ["py_extension_test.py"],
    deps = [
        ":ext_shared",
        "@dev_pip//pyelftools",
        "@rules_python//python/runfiles",
    ],
)

py_extension_analysis_test_suite(
    name = "py_extension_analysis_tests",
)

py_limited_api_test_suite(
    name = "py_limited_api_tests",
)

dependency_graph_test_suite(
    name = "dependency_graph_tests",
)
