package(default_visibility = ["//visibility:public"])

sh_test(
    name = "external_native_py_binary_test",
    srcs = ["external_native_py_binary_test.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
        "@native_py_binary_repo//:external_native_py_binary",
    ],
    env = {
        "BIN_RLOCATION": "native_py_binary_repo/external_native_py_binary",
    },
)
