# Copyright 2024 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("@rules_python//python:py_test.bzl", "py_test")

package(default_visibility = ["//visibility:public"])

py_test(
    name = "test",
    srcs = ["test.py"],
    # Make this test better respect pyenv
    env_inherit = ["PYENV_VERSION"],
)

alias(
    name = "is_local_py_enabled",
    actual = select({
        ":_is_py_local_set": "@local_python3//:is_matching_python_version",
        "//conditions:default": ":_does_not_match",
    }),
)

config_setting(
    name = "_is_py_local_set",
    flag_values = {
        ":py": "local",
    },
)

config_setting(
    name = "_does_not_match",
    flag_values = {
        ":py": "<DOES NOT MATCH>",
    },
)

# set to "local" to use the local toolchain
string_flag(
    name = "py",
    build_setting_default = "",
)
